--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "10.2.0",
+    "next": "^10.2.3",
+    "nodemailer": "^6.6.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
