--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "cleave.js": "^1.6.0",
+    "jquery": "^3.6.0",
     "next": "^10.2.3",
     "nodemailer": "^6.6.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-ga": "^3.3.0"
   }
 }
