--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm install && next build && next start",
-    "dev": "next dev",
-    "build": "next build"
+    "dev": "nodemon server.js",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "cleave.js": "^1.6.0",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "next": "^10.2.3",
     "nodemailer": "^6.6.1",
+    "nodemon": "^2.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0"
