Remove unused package jest

--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-ga": "^3.3.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
-    "jest": "^28.0.3"
+    "dotenv": "^16.0.0"
   }
 }
