--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,15 @@
-version: '3'
+version: "3.7"
 
 services:
-  app:
-    build: .
+  nginx:
+    image: nginx:1.21
     ports:
-      - 3333:3000
+      - "80:80"
+      - "443:443"
+    volumes:
+      - "./nginx/ssl.prod.conf:/etc/nginx/conf.d/default.conf"
+      - "/root/.certs:/etc/nginx/certs"
+  rafisa-app-1:
+    build: .
+  rafisa-app-2:
+    build: .
