--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Shut down all running containers and bring them up again
-        run: docker compose down && docker compose up
+        run: docker compose down && docker compose up -d
