--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "react-ga": "^3.3.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0"
+    "@types/jest": "^28.1.6",
+    "@types/node": "^18.7.1",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "dotenv": "^16.0.0",
+    "typescript": "^4.7.4"
   }
 }
