--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
     "cleave.js": "^1.6.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
     "jquery": "^3.6.0",
-    "next": "^10.2.3",
-    "nodemailer": "^6.6.1",
-    "nodemon": "^2.0.7",
+    "next": "^12.2.4",
+    "nodemailer": "^6.7.7",
+    "nodemon": "^2.0.19",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-ga": "^3.3.0"
+    "react-ga": "^3.3.1"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/node": "^18.7.1",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.0.1",
     "typescript": "^4.7.4"
   }
 }
