First attempt to correct the serving of static files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,6 +19,11 @@ server {
   location / {
     proxy_pass http://backend;
   }
+
+  # Static files
+  location /assets/ {
+    proxy_pass http://backend;
+  }
 }
 
 # Configures the incoming https requests on port 443, using reverse proxy
