Second attempt to correct the serving of static files

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,6 +22,7 @@ server {
 
   # Static files
   location /assets/ {
+    rewrite ^/assets/(.*)$ /app/assets/$1 break;
     proxy_pass http://backend;
   }
 }
