Fifth attempt to solve the serving of static files issue

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon server.js",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export",
+    "deploy": "npm run build && npm run export && touch ./out/.nojekyll"
   },
   "dependencies": {
     "cleave.js": "^1.6.0",
