--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,11 +20,11 @@ server {
     proxy_pass http://backend;
   }
 
-  # Static files
-  location /assets/ {
-    rewrite ^/assets/(.*)$ /app/assets/$1 break;
-    proxy_pass http://backend;
-  }
+  # # Static files
+  # location /assets/ {
+  #   rewrite ^/assets/(.*)$ /app/assets/$1 break;
+  #   proxy_pass http://backend;
+  # }
 }
 
 # Configures the incoming https requests on port 443, using reverse proxy
