Seventh attempt to solve the static assets issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
         run: |
           docker compose down
           docker compose build
-          docker compose up -d
+          docker compose up -d --build
