--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,7 +16,7 @@ server {
 
   # return 301 https://$hostname$request_uri;
 
-  location / {
+  location /rafisa-com-br {
     proxy_pass http://backend;
   }
 
