Eighth attempt to solve the static assets issue

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,7 +16,13 @@ server {
 
   # return 301 https://$hostname$request_uri;
 
-  location /rafisa-com-br {
+  location / {
+    proxy_pass http://backend;
+  }
+
+  # Static files
+  location /assets/ {
+    rewrite /assets/(.*) /rafisa-com-br/assets/$1 break;
     proxy_pass http://backend;
   }
 
