--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -20,11 +20,11 @@ server {
     proxy_pass http://backend;
   }
 
-  # Static files
-  location /assets/ {
-    rewrite /assets/(.*) /rafisa-com-br/assets/$1 break;
-    proxy_pass http://backend;
-  }
+  # # Static files
+  # location /assets/ {
+  #   rewrite /assets/(.*) /rafisa-com-br/assets/$1 break;
+  #   proxy_pass http://backend;
+  # }
 
   # # Static files
   # location /assets/ {
