--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,5 +24,5 @@ jobs:
             git pull origin rafisa-old
             cd /rafisa-app/server
             docker compose down
-            docker compose build
+            docker compose build --no-cache
             docker compose up -d
