--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
     "express": "^4.17.1",
     "jquery": "^3.6.0",
     "next": "^10.2.3",
+    "next-sitemap": "^4.0.7",
     "nodemailer": "^6.6.1",
     "nodemon": "^2.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-ga": "^3.3.0"
-  },
-  "devDependencies": {
-    "next-sitemap": "^4.0.7"
   }
 }
